2008-10-02 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	Fixed [ 1877578 ] sfcb appears to leak memory while handling indications

	* sfcBroker.c:
	Fixed [ 2138163 ] sfcb: Wrong PID when running as daemon
	(patch by Ingo van Lil)

	* cimcClientSfcbLocal.c, msgqueue.c:
	Fixed [ 2049872 ] "--- Warning: fd is closed" message from binary intf app

	* cimcClientSfcbLocal.c, providerDrv.c:
	Fixed [ 2143315 ] Remove unnecessary lines in providerDrv & cimcClient
	
2008-09-10 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	Fixed [ 2100707 ] NULL properties in property list returned with value
	(patch by Alexander Dunfey)

2008-09-09 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	Fixed [ 2100911 ] getSchema.sh: line 17: [: =: unary operator expected
	(patch by Narasimha Sharoff)

2008-09-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, control.c, cimslpCMPI.c, sfcb.cfg.pre.in
	Fixed [ 1945390 ] Request for SLP service URL hostname override 
		Patch from Tyrel Datwyler

2008-09-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimslp.c cimslpCMPI.c:
	Fixed [ 2093273 ] Fix "cimomConfig" + myGetInstances memory leaks

2008-08-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c:
	Fixed [ 2023638 ] SFCB not considering UTC offset in calculating binary time
		Refix due to misinterpretation of the spec.

2008-08-20 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	Fixed [ 2062904 ] small memory leak after exportIndication

2008-08-19 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.h:
	Fixed [ 2060748 ] compile fails when --disable-debug configure flag is set

	* cimXmlGen.c:
	Fixed a compiler warning ("suggest parenthesis")
	
2008-08-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* datetime.c:
	Fixed [ 2023638 ] SFCB not considering UTC offset in calculating binary time

2008-08-13 Chris Buccella  <buccella@linux.vnet.ibm.com>
