@@ -46,6 +46,7 @@ Bugs fixed:
 - 2138163 sfcb: Wrong PID when running as daemon
 - 2049872 "--- Warning: fd is closed" message from binary intf app
 - 2143315 Remove unnecessary lines in providerDrv & cimcClient
+- 2064360 Internal provider SIGSEGV when calling getProperty
 
 Changes in 1.3.1
 ================
